<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/scrollView_addAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" >

        <LinearLayout
            android:id="@+id/container_ringing_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_time"
                style="@style/textViewWakeupTime"
                android:layout_marginTop="50dp"
                android:layout_weight="2"
                android:paddingBottom="@dimen/view_vertical_margin"
                android:text="@string/alarm_time" />

            <Button
                android:id="@+id/btn_snooze_alarm"
                style="@style/buttonSnooze"
                android:layout_marginBottom="-40dp"
                android:layout_marginTop="-40dp"
                android:layout_weight="3"
                android:text="@string/btn_snooze_alarm" />

            <TextView
                android:id="@+id/alarm_name"
                style="@style/textViewNormal"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-normal"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_stop_alarm"
        style="@style/buttonMain"
        android:drawableEnd="@drawable/ic_action_cancel"
        android:drawablePadding="-120dp"
        android:paddingRight="90dp"
        android:text="@string/btn_stop_alarm" />

</RelativeLayout>